# Ai_robot

./: .dockerignore  .gitignore  README.md
docker/: Dockerfile  (+10 more)
services/python/: .env.example  .env.template  .gitignore  README.md  env.template  pyproject.toml
services/python/app/: connectors_main.py  docling_main.py  indexing_main.py  query_main.py  research_main.py
services/python/app/agents/actions/azure/: azure_blob.py
services/python/app/agents/actions/dropbox/: dropbox.py
services/python/app/agents/db/: startup.py  tools_db.py
services/python/app/agents/router/: router.py
services/python/app/agents/tools/factories/: dropbox.py  linkedin.py  microsoft.py  slack.py
services/python/app/api/helpers/: __init__.py  deepresearch_helper.py
services/python/app/api/middlewares/: auth.py
services/python/app/api/routes/: agent.py  chatbot.py  entity.py  health.py  image.py  search.py  websocket.py
services/python/app/builders/: records_builder.py
services/python/app/connectors/api/: router.py
services/python/app/connectors/core/factory/: connector_factory.py
services/python/app/connectors/core/registry/: connector.py  connector_builder.py  connector_registry.py
services/python/app/connectors/enums/: enums.py
services/python/app/connectors/services/: base_arango_service.py  event_service.py  kafka_service.py
services/python/app/connectors/sources/bookstack/: connector.py
services/python/app/connectors/sources/dropbox/: connector.py
services/python/app/connectors/sources/notion/: __init__.py  apps.py  connector.py
services/python/app/connectors/sources/samba/: __init__.py  apps.py  connector.py  security_service.py  sync_tasks.py
services/python/app/connectors/sources/slack/: __init__.py  apps.py  connector.py  enterprise.py  manifest.py  oauth_handler.py  user_auth_service.py  webhook_handler.py
services/python/app/connectors/sources/web/: connector.py
services/python/app/containers/: connector.py  container.py  docling.py  indexing.py  query.py
services/python/app/containers/utils/: utils.py
services/python/app/core/: celery_app.py  signed_url.py
services/python/app/events/: events.py  processor.py
services/python/app/health/: health.py
services/python/app/migrations/: permission_edge_migration.py
services/python/app/models/: blocks.py  entities.py  permission.py  records.py
services/python/app/modules/agents/models/: models.py
services/python/app/modules/agents/qna/: chat_state.py  nodes.py  tools.py
services/python/app/modules/chunking/: __init__.py  hierarchical_chunker.py
services/python/app/modules/extraction/: domain_extraction.py
services/python/app/modules/indexing/: run.py
services/python/app/modules/parsers/excel/: excel_parser.py  xls_parser.py
services/python/app/modules/parsers/google_files/: parser_user_service.py
services/python/app/modules/parsers/html_parser/: html_parser.py
services/python/app/modules/parsers/image_parser/: image_parser.py
services/python/app/modules/parsers/markdown/: markdown_parser.py
services/python/app/modules/qna/: agent_prompt.py  prompt_templates.py
services/python/app/modules/reranker/: reranker.py
services/python/app/modules/retrieval/: retrieval_service.py
services/python/app/modules/transformers/: arango.py  blob_storage.py  document_extraction.py  sink_orchestrator.py  vectorstore.py
services/python/app/modules/web_search/: __init__.py  classifier.py  convert_model.py  onnx_router.py
services/python/app/schema/arango/: documents.py  graph.py
services/python/app/scripts/: services_linux.sh
services/python/app/services/: ai_config_handler.py  kafka_consumer.py
services/python/app/services/cache/: __init__.py  semantic_cache.py
services/python/app/services/deepresearch/: __init__.py  agent.py  prompts.py  stream.py  tasks.py
services/python/app/services/docling/: docling_service.py  start_docling_service.py
services/python/app/services/graph_db/: graph_db_factory.py
services/python/app/services/image_generation/: __init__.py  service.py
services/python/app/services/key_value/: key_value_factory.py
services/python/app/services/permission_sync/: __init__.py  permission_sync_service.py
services/python/app/services/sandbox/: __init__.py  service.py
services/python/app/services/web_search/: service.py  test_service.py
services/python/app/services/websocket/: __init__.py  websocket_manager.py
services/python/app/utils/: aimodels.py  api_call.py  cache_helpers.py  chat_helpers.py  citations.py  debug_utils.py  indexing_helpers.py  jwt.py  llm.py  oauth_config.py  query_transform.py  streaming.py
services/python/app/utils/converters/: docling_doc_to_blocks.py
services/python/libs/: README.md  __init__.py
services/python/libs/containers/: __init__.py  base.py
services/python/libs/core/: __init__.py  constants.py  encryption.py  exceptions.py  logging.py
services/python/libs/core/config/: __init__.py  configuration_service.py  key_value_store.py
services/python/libs/core/constants/: __init__.py  ai_models.py  arangodb.py  base.py
services/python/libs/core/featureflag/: __init__.py  config.py  interface.py  service.py
services/python/libs/core/resilience/: __init__.py  dlq.py  retry.py
services/python/libs/core/utils/: __init__.py  redis_utils.py  time_utils.py
services/python/libs/data/: __init__.py
services/python/libs/data/graph/: __init__.py  arango_service.py  config.py  interface.py  models.py
services/python/libs/data/vector/: __init__.py  config.py  constants.py  factory.py  filter.py  interface.py  qdrant_service.py
services/python/libs/messaging/: __init__.py  factory.py
services/python/libs/messaging/interface/: __init__.py  consumer.py  producer.py
services/python/libs/messaging/kafka/: __init__.py  config.py  consumer.py  producer.py  rate_limiter.py
services/python/libs/scheduler/: __init__.py  factory.py  interface.py  redis_scheduler.py
services/python/libs/security/: __init__.py  jwt.py  oauth.py  signed_url.py
services/python/requirements/: base.txt  connector.txt  indexing.txt  query.txt
(+921 files in other folders)
