[tool.ruff]
line-length = 88
target-version = "py310"
src = [".", "libs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",    # Line too long
    "E402",    # Module level import not at top (env loading pattern)
    "ANN",     # Type annotation rules (too strict for existing codebase)
    "PLR2004", # Magic value comparisons (would require extensive refactoring)
]


[project]
name = "ai-service"
description = "AI Pipeline Service"
version = "0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # ==========================================================================
    # FastAPI & Web
    # ==========================================================================
    "fastapi==0.115.6",
    "uvicorn==0.30.6",
    "python-multipart==0.0.18",
    "python-jose==3.4.0",
    "httpx>=0.27.0",
    
    # ==========================================================================
    # Configuration & Encryption
    # ==========================================================================
    "etcd3==0.12.0",
    "cryptography==44.0.1",
    "python-dotenv==1.0.1",
    
    # ==========================================================================
    # Data Validation
    # ==========================================================================
    "pydantic==2.10.5",
    "jsonschema==4.23.0",
    
    # ==========================================================================
    # Databases
    # ==========================================================================
    "python-arango==8.1.5",
    "redis==5.2.1",
    "aioredis==2.0.1",
    "qdrant-client==1.13.1",
    
    # ==========================================================================
    # Messaging
    # ==========================================================================
    "aiokafka==0.12.0",
    
    # ==========================================================================
    # Async & HTTP
    # ==========================================================================
    "aiohttp==3.11.2",
    "aiolimiter==1.2.1",
    "tenacity==8.5.0",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    
    # ==========================================================================
    # LangChain Stack (pinned for compatibility)
    # ==========================================================================
    "langchain==0.3.19",
    "langchain-core>=0.3.35,<1.0.0",
    "langchain-community==0.3.18",
    "langchain-experimental==0.3.4",
    "langchain-huggingface>=0.1.0",
    "langchain-openai==0.3.28",
    "langchain-qdrant==0.2.0",
    "langgraph==0.3.34",
    
    # ==========================================================================
    # ML & Embeddings
    # ==========================================================================
    "sentence-transformers==3.4.1",
    "fastembed==0.5.1",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "optimum==1.25.1",
    "onnxruntime>=1.17.0,!=1.20.0",
    
    # ==========================================================================
    # NLP
    # ==========================================================================
    "spacy<=3.7.5",
    
    # ==========================================================================
    # LLM Providers
    # ==========================================================================
    "litellm==1.72.4",
    "tiktoken>=0.7.0",
    
    # ==========================================================================
    # Document Processing
    # ==========================================================================
    "docling==2.60.0",
    "openpyxl==3.1.5",
    "xlrd>=2.0.1",
    "PyMuPDF==1.24.14",
    "ocrmypdf==16.8.0",
    "Pillow>=9.0.0",
    "CairoSVG==2.8.2",
    "beautifulsoup4==4.12.3",
    "html-to-markdown==2.3.0",
    "markdown==3.8",
    
    # ==========================================================================
    # Google APIs
    # ==========================================================================
    "google-api-python-client==2.161.0",
    "google-auth-oauthlib==1.2.1",
    
    # ==========================================================================
    # Microsoft Graph
    # ==========================================================================
    "msgraph-sdk==1.16.0",
    
    # ==========================================================================
    # Cloud Storage
    # ==========================================================================
    "dropbox==12.0.2",
    "box-sdk-gen==1.12.0",
    "aioboto3>=12.0.0",
    
    # ==========================================================================
    # Collaboration Tools
    # ==========================================================================
    "slack-sdk==3.27.0",
    "notion-client==2.2.1",
    "linkedin-api-client>=0.3.0",
    
    # ==========================================================================
    # Issue Trackers
    # ==========================================================================
    "PyGithub==2.8.1",
    "python-gitlab==6.4.0",
    
    # ==========================================================================
    # Other Connectors
    # ==========================================================================
    "evernote3>=1.25.14",
    "thrift>=0.16.0",
    "pysmb>=1.2.9",
    
    # ==========================================================================
    # Data Processing
    # ==========================================================================
    "numpy<2",
    "pandas==2.2.3",
    "orjson>=3.10.0",
    
    # ==========================================================================
    # Templates & Utils
    # ==========================================================================
    "Jinja2==3.1.6",
    "dependency-injector==4.44.0",
    "celery==5.4.0",
    
    # ==========================================================================
    # Protobuf (pinned for etcd3 compatibility)
    # ==========================================================================
    "protobuf>=3.20.0,<4.0.0",
    
    # ==========================================================================
    # DeepResearch
    # ==========================================================================
    "docker>=7.0.0",
    "json5>=0.9.25",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "libs*"]
exclude = ["modules"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
module = "app.indexing_main:run"

[project.optional-dependencies]
dev = [
    "ruff==0.11.9",
    "pytest>=7.0.0",
    "requests-mock==1.12.1",
]
